# envshare-rs

./: .env.example  .gitignore  README.md
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: apikeys.rs  healthcheck.rs  mod.rs  swagger-ui.rs
backend/src/api/secrets/: endpoints.rs  types.rs
backend/src/db/: apikeys.sql  mod.rs  secrets.sql
frontend/: Cargo.toml  index.html  trunk.toml
frontend/src/: app.rs  main.rs  tailwind.css
frontend/src/app/: home.rs  mod.rs  unseal.rs
frontend/src/components/editor/: block.rs  button.rs  clipboard.rs  frame.rs  mod.rs  static-block.rs  types.rs
