[package]
name = "envshare-rs-backend"
authors = ["0xrusowsky"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
rocket = "0.5.1"
serde = "1.0.209"
serde_json = "1.0.128"
utoipa = { version = "4.2.3", features = ["uuid", "rocket_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["rocket", "debug-embed"] }
uuid = { version = "1.1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
urlencoding = "2.1.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["macros", "migrate", "uuid"]
