[package]
name = "envshare-rs-frontend"
authors = ["0xrusowsky"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.11.0", features = ["events"] }
gloo-console = "0.3.0"
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3.69", features = [
    "Element",
    "HtmlElement",
    "DomRect",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
js-sys = "0.3.69"
yew-hooks = "0.3.1"
reqwest = { version = "0.12.8", features = ["json"] }
wasm-bindgen-futures = "0.4.43"
serde_json = "1.0.128"
serde = "1.0.210"
chrono = "0.4.38"
